src/style.css
/* -------------------- CSS RESET ------------------ */
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  font-family: "Inter", sans-serif;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

/* prettier-ignore */
img, picture, video, canvas, svg {
  display: block;
}

/* prettier-ignore */
input, button, textarea, select {
  font: inherit;
}

/* prettier-ignore */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

#root,
#__next {
  isolation: isolate;
}

/* -------------------- CSS RESET ------------------ */
.main-container {
  width: 550px;
  height: -moz-fit-content;
  height: fit-content;
  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
  border-radius: 10px;
  overflow: hidden;
  /* -------------------- HEADER COMPONENT ------------------ */
  /* -------------------- CARD COMPONENT ------------------ */
}
.main-container .header {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 55px;
  margin-bottom: 20px;
  color: white;
  background-color: #f55a5a;
}
.main-container .header .header-title {
  font-weight: 500;
  font-size: 14.4608px;
  letter-spacing: -0.075em;
}
.main-container .header ion-icon {
  font-size: 24px;
  margin-right: 7px;
}
.main-container .card-container {
  display: flex;
  gap: 19px;
  width: 550px;
  height: -moz-fit-content;
  height: fit-content;
  padding: 20px 40px 20px 40px;
}
.main-container .card-container .card-img {
  width: 125px;
  height: 168px;
  -o-object-fit: cover;
     object-fit: cover;
  border-radius: 5px;
}
.main-container .card-container .location-container {
  display: flex;
  align-items: center;
}
.main-container .card-container .location-container ion-icon {
  color: #f55a5a;
  font-size: 10px;
  margin-right: 4px;
}
.main-container .card-container .location-container .location-name {
  text-transform: uppercase;
  font-size: 10.24px;
  letter-spacing: 0.17em;
  color: #2b283a;
  margin-right: 12px;
}
.main-container .card-container .location-container .location-link {
  font-size: 10.24px;
  text-decoration-line: underline;
  color: #918e9b;
}
.main-container .card-container .card-title {
  font-weight: 700;
  font-size: 25px;
  color: #2b283a;
}
.main-container .card-container .card-date {
  font-weight: 700;
  font-size: 10.24px;
  color: #2b283a;
}
.main-container .card-container .card-text {
  width: 100%;
  font-size: 10.24px;
  color: #2b283a;
}

/* -------------------- HELPER CLASSES ------------------ */
.border:not(:last-child) {
  width: 470px;
  margin: 0 auto;
  border: 1px solid #f5f5f5;
}/*# sourceMappingURL=style.css.map */

